perfil design pc

--- a/App/Views/app/painel.phtml
+++ b/App/Views/app/painel.phtml
@@ -68,8 +68,8 @@
 
 
                 <?php
-                    // if(isset($this->view->criarKinesis)){
-                    //     if($this->view->criarKinesis){ 
+                    if(isset($this->view->criarKinesis)){
+                        if($this->view->criarKinesis){ 
                 ?>
                     
                         <form method="POST" action="/addKinesis" class="form-group add_kinesis">
@@ -172,8 +172,8 @@
                             </div>
                         </form>
                 <?php 
-                    //     }
-                    // } 
+                        }
+                    } 
                 ?>
             </div>
 
