--- a/App/Views/app/perfil.phtml
+++ b/App/Views/app/perfil.phtml
@@ -1,38 +1,48 @@
-<div class="container-fluid">
+<div class="container-fluid perfil">
     <div class="row">
         <div class="col">
-            <?php
-                if(isset($_GET['msg'])){
-                    if($_GET['msg'] == 'dadosAlt'){
-                        echo 'dados alterados';
+            <header class="bg-success">
+                <nav>
+                    <a href="/painel" class="text-light" style="width:10%" title="voltar"><i class="fas fa-chevron-circle-left"></i></a><br/>
+                    <span><img src="img/sistema/logo_ganko.png" alt="logo ganko" class="img-fluid logo" /></span>
+                    <a href="/alterar_dados" class="text-light ml-3" style="width:5%" title="alterar dados"><i class="fas fa-user-cog"></i></a>
+                    <a href="/deletar_conta" class="text-light" style="width:5%" title="deletar conta"><i class="fas fa-trash"></i></a><br/>
+                </nav>
+            </header>
+            <div class="conteudo">
+                <?php
+                    if(isset($_GET['msg'])){
+                        if($_GET['msg'] == 'dadosAlt'){
+                            echo 'dados alterados';
+                        }
                     }
-                }
-            ?>
-			<a href="/painel">voltar</a><br/>
-            <a href="/deletar_conta">deletar conta</a>
-        </div>
-        <div class="col">
-            <img src="img/perfil/<?= $this->view->dados_usuario['foto']; ?>" class="img-fluid" style="width:300px;" />
-            <p><?= $this->view->dados_usuario['nome']; ?></p>
-            <p><?= $this->view->dados_usuario['sobrenome']; ?></p>
-            <p><?= $this->view->dados_usuario['nascimento']; ?></p>
-            <p><?= $this->view->dados_usuario['genero']; ?></p>
-            <p><?= $this->view->dados_usuario['comeco']; ?></p>
-            <p><?= $this->view->dados_usuario['nick']; ?></p>
-            <p><?= $this->view->dados_usuario['email']; ?></p>
-            <?php
-                if($this->view->kinesis_existem){
-                    print("<p>".$this->view->primaria."</p>");
+                ?>
 
-                    foreach($this->view->secundaria as $secundarias){
-                        print("<p>".$secundarias['secundaria']."</p>");
-                    }
-                }
-            ?>
-            <a href="/alterar_dados">alterar dados</a>
-        </div>
-        <div class="col">
-            
+                <span class="bfoto_perfil">
+                    <img src="img/perfil/<?= $this->view->dados_usuario['foto']; ?>" class="img-fluid" style="width:300px;" />
+                </span>
+                <div class="row dados">
+                    <div class="col-6">
+                        <p><?= $this->view->dados_usuario['nome']; ?> <?= $this->view->dados_usuario['sobrenome']; ?></p>
+                        <p><?= $this->view->dados_usuario['nick']; ?></p>
+                        <p><?= $this->view->dados_usuario['nascimento']; ?></p>
+                        <p><?= $this->view->dados_usuario['genero']; ?></p>
+                        <p><?= $this->view->dados_usuario['email']; ?></p>
+                    </div>
+                    <div class="col-6">
+                        <p><?= $this->view->dados_usuario['comeco']; ?></p>
+                        <?php
+                            if($this->view->kinesis_existem){
+                                print("<p>".$this->view->primaria."</p>");
+
+                                foreach($this->view->secundaria as $secundarias){
+                                    print("<p>".$secundarias['secundaria']."</p>");
+                                }
+                            }
+                        ?>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
