C:/Program Files/Git/perfil link para perfil dinâmico

--- a/App/Views/app/painel.phtml
+++ b/App/Views/app/painel.phtml
@@ -255,7 +255,7 @@
                                     ");
                                 }
                                 print("<p class='texto_postagem'>".$postagem['texto']."</p>
-                                <a href='/perfil' class='link_usuario'>
+                                <a href='/perfil?who=".$postagem['nick_usuario']."' class='link_usuario'>
                                     <img src='img/perfil/".$postagem['foto_usuario']."' class='imagem_usuario_publicacao' />
                                     <p class='nome_usuario'>".$postagem['nome_usuario']."</p>
                                 </a>
