--- a/public/css/style.css
+++ b/public/css/style.css
@@ -707,3 +707,13 @@ span{
 	}
 }
 /* ######## perfil ######## */
+
+/* ######## alterar dados ######## */
+@media (min-width: 768px){
+	
+}
+
+@media (max-width: 768px){
+	
+}
+/* ######## alterar dados ######## */
