C:/Program Files/Git/adicionar_amigos código para adicionar e remover amigos

--- a/App/Views/app/adicionar_amigos.phtml
+++ b/App/Views/app/adicionar_amigos.phtml
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col">
+        <div class="col-3">
             <h5 class="bg-success">meus amigos: </h5>
             <div class="retorno_meusamigos">
                 <?php
@@ -23,32 +23,50 @@
                 </div>
             </form>
             <?php
+                $qtd_amigos = count($this->view->naoAmigo);
+
                 if(isset($this->view->retorno_procuraramigo)){
                     print('<div class="resultado_busca">');
 
                     foreach($this->view->retorno_procuraramigo AS $procuraramigo){
+                        $val = true;
+                        for($i=0;$i<$qtd_amigos;$i++){
+                            if($this->view->naoAmigo[$i]['id_amigo'] == $procuraramigo['id']){
+                                $val = false;
+                            }
+                        }
                         print("<p class='text-center'>
-                            <a href='/perfil?who=".$procuraramigo['nick']."'>
-                                ".$procuraramigo['nick']."<img src='img/perfil/".$procuraramigo['foto']."' width='100' height='100' /></a>
-                            <a href='/add_amigo?acao=adicionar&id=".$procuraramigo['id']."' class='btn btn-info'>adicionar</a>
-                            <a href='/add_amigo?acao=remover&id=".$procuraramigo['id']."' class='btn btn-danger'>remover</a>
-                        </p>");
+                            <a href='/perfil?who=".$procuraramigo['nick']."'>".$procuraramigo['nick']."<img src='img/perfil/".$procuraramigo['foto']."' width='100' height='100' /></a>");
+                            if($val == true){
+                                print("<a href='/alt_amigo?acao=adicionar&id=".$procuraramigo['id']."' class='btn btn-info'>adicionar</a>");
+                            }else{
+                                print("<a href='/alt_amigo?acao=remover&id=".$procuraramigo['id']."' class='btn btn-danger'>remover</a>");
+                            }
+                            print("</p>");
                     }
-    
                     print('</div>');
                 }
             ?>
         </div>
-        <div class="col">
+        <div class="col-3">
             <h5 class="bg-danger">possíveis amigos: </h5>
             <?php 
                 foreach($this->view->usuario_add AS $usuario){
+                    $val = true;
+                    for($i=0;$i<$qtd_amigos;$i++){
+                        if($this->view->naoAmigo[$i]['id_amigo'] == $usuario['id']){
+                            $val = false;
+                        }
+                    }                            
+                    
                     print("<p class='text-right'>
-                        <a href='/perfil?who=".$usuario['nick']."'>
-                        ".$usuario['nick']."<img src='img/perfil/".$usuario['foto']."' width='100' height='100' /></a>
-                        <a href='/add_amigo?acao=adicionar&id=".$usuario['id']."' class='btn btn-info'>adicionar</a>
-                        <a href='/add_amigo?acao=remover&id=".$usuario['id']."' class='btn btn-danger'>remover</a>
-                    </p>");
+                        <a href='/perfil?who=".$usuario['nick']."'>".$usuario['nick']."<img src='img/perfil/".$usuario['foto']."' width='100' height='100' /></a>");
+                        if($val == true){
+                            print("<a href='/alt_amigo?acao=adicionar&id=".$usuario['id']."' class='btn btn-info'>adicionar</a>");
+                        }else{
+                            print("<a href='/alt_amigo?acao=remover&id=".$usuario['id']."' class='btn btn-danger'>remover</a>");
+                        }
+                    print("</p>");
                 }
             ?>
         </div>
