--- a/App/Views/app/adicionar_amigos.phtml
+++ b/App/Views/app/adicionar_amigos.phtml
@@ -1,4 +1,48 @@
-<div class="container-fluid">
+<div class="container-fluid adicionar_amigos">
+    <header class="bg-success">
+        <nav>
+            <a href="/sair" class="text-light" style="width:10%" title="sair"><i class="fas fa-power-off"></i></a><br/>
+            <span><img src="img/sistema/logo_ganko.png" alt="logo ganko" class="img-fluid logo" /></span>
+            <a href="/perfil" class="text-light" style="width:5%" title="perfil"><i class="fas fa-user-circle"></i></a><br/>
+            <a href="/adicionar_amigos" class="text-light ml-3" style="width:5%" title="amigos"><i class="fas fa-user-friends"></i></a>
+        </nav>
+    </header>
+    <div id="mySidenav" class="sidenav bg-success">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        
+        <span><img src="img/sistema/logo_ganko.png" alt="logo ganko" class="img-fluid logo" /></span>
+        <div class="link_a">
+            <a href="/sair" class="text-light nav_a" title="sair"><i class="fas fa-power-off"></i> encerrar sessão</a><br/>
+            <a href="/perfil" class="text-light nav_a" title="perfil"><i class="fas fa-user-circle"></i> perfil</a><br/>
+            <a href="/adicionar_amigos" class="text-light nav_a" title="amigos"><i class="fas fa-user-friends"></i> adicionar amigos</a>
+        </div>
+    </div>
+    <span class="bg-success open_resp" style="font-size:30px;cursor:pointer" onclick="openNav()">
+        <img src="img/sistema/logo_ganko.png" alt="logo ganko" class="img-fluid logo" />
+        <p>&#9776;</p>
+    </span>
+
+    <script>
+        var x, i;
+
+        function openNav(){
+            document.getElementById("mySidenav").style.width = "100%";
+
+            x = document.querySelectorAll(".nav_a")
+            for(i=0; i<x.length; i++){
+                x[i].style.display = "block";
+            }
+        }
+        function closeNav(){
+            document.getElementById("mySidenav").style.width = "0%";
+
+            x = document.querySelectorAll(".nav_a")
+            for(i=0; i<x.length; i++){
+                x[i].style.display = "none";
+            }
+        }
+    </script>
+
     <div class="row">
         <div class="col-3">
             <h5 class="bg-success">meus amigos: </h5>
@@ -8,28 +52,36 @@
 
                     // LIMITAR RETORNO DE AMIGOS
                     foreach($this->view->usuario_add AS $usuario){
+                        $val = true;
                         for($i=0;$i<$qtd_amigos;$i++){
-                            if($this->view->amigos[$i]['id_amigo'] != $usuario['id']){
-                                print("<p class='text-right'>
-                                    <a href='/perfil?who=".$usuario['nick']."'>".$usuario['nick']."<img src='img/perfil/".$usuario['foto']."' width='100' height='100' /></a>
-                                    <a href='/alt_amigo?acao=remover&id=".$usuario['id']."' class='btn btn-danger'>remover</a>");
-                                print("</p>");
+                            if($this->view->amigos[$i]['id_amigo'] == $usuario['id']){
+                                $val = false;
                             }
-                        }                   
+                        }                            
+                        
+                        if($val == false){
+                            print("<span class='link_amigo'>
+                                <a href='/perfil?who=".$usuario['nick']."'>
+                                    <img src='img/perfil/".$usuario['foto']."' class='img_amigo' />
+                                    <p>".$usuario['nick']."</p>
+                                </a>
+                                <a href='/alt_amigo?acao=remover&id=".$usuario['id']."' class='btn btn-danger w-50'>remover</a>
+                            </span><hr/>");
+                        }
                     }
                 ?>
             </div>
         </div>
         <div class="col-6">
             <h5 class="bg-info text-center">procurar: </h5>
-            <form method="POST" action="">
-                <div class="box_nome">
-                    <input type="text" name="amigo" placeholder="nick" />
+            <form method="POST" action="#" class='form-group'>
+                <div class="form-group box_nome">
+                    <input type="text" name="amigo" class='form-control w-50 d-inline' placeholder="nick" />
                 </div>
                 <div class="box_submit">
-                    <button type="submit">procurar</button>
+                    <button type="submit" class='btn btn-outline-success w-25'>procurar</button>
                 </div>
-            </form>
+            </form><hr/>
             <?php
                 if(isset($this->view->retorno_procuraramigo)){
                     print('<div class="resultado_busca">');
@@ -41,14 +93,17 @@
                                 $val = false;
                             }
                         }
-                        print("<p class='text-center'>
-                            <a href='/perfil?who=".$procuraramigo['nick']."'>".$procuraramigo['nick']."<img src='img/perfil/".$procuraramigo['foto']."' width='100' height='100' /></a>");
+                        print("<span class='link_amigo'>
+                            <a href='/perfil?who=".$procuraramigo['nick']."'>
+                                <img src='img/perfil/".$procuraramigo['foto']."' class='img_amigo' />
+                                <p>".$procuraramigo['nick']."</p>
+                            </a>");
                             if($val == true){
-                                print("<a href='/alt_amigo?acao=adicionar&id=".$procuraramigo['id']."' class='btn btn-info'>adicionar</a>");
+                                print("<a href='/alt_amigo?acao=adicionar&id=".$procuraramigo['id']."' class='btn btn-info w-50'>adicionar</a>");
                             }else{
-                                print("<a href='/alt_amigo?acao=remover&id=".$procuraramigo['id']."' class='btn btn-danger'>remover</a>");
+                                print("<a href='/alt_amigo?acao=remover&id=".$procuraramigo['id']."' class='btn btn-danger w-50'>remover</a>");
                             }
-                            print("</p>");
+                            print("</span><hr/>");
                     }
                     print('</div>');
                 }
@@ -65,14 +120,17 @@
                         }
                     }                            
                     
-                    print("<p class='text-right'>
-                        <a href='/perfil?who=".$usuario['nick']."'>".$usuario['nick']."<img src='img/perfil/".$usuario['foto']."' width='100' height='100' /></a>");
+                    print("<span class='link_amigo'>
+                        <a href='/perfil?who=".$usuario['nick']."'>
+                            <img src='img/perfil/".$usuario['foto']."' class='img_amigo' />
+                            <p>".$usuario['nick']."</p>
+                        </a>");
                         if($val == true){
-                            print("<a href='/alt_amigo?acao=adicionar&id=".$usuario['id']."' class='btn btn-info'>adicionar</a>");
+                            print("<a href='/alt_amigo?acao=adicionar&id=".$usuario['id']."' class='btn btn-info w-50'>adicionar</a>");
                         }else{
-                            print("<a href='/alt_amigo?acao=remover&id=".$usuario['id']."' class='btn btn-danger'>remover</a>");
+                            print("<a href='/alt_amigo?acao=remover&id=".$usuario['id']."' class='btn btn-danger w-50'>remover</a>");
                         }
-                    print("</p>");
+                    print("</span><hr/>");
                 }
             ?>
         </div>
