C:/Program Files/Git/adicionar_amigos correção de caminho no nav

--- a/App/Views/app/adicionar_amigos.phtml
+++ b/App/Views/app/adicionar_amigos.phtml
@@ -1,10 +1,9 @@
 <div class="container-fluid adicionar_amigos">
     <header class="bg-success">
         <nav>
-            <a href="/sair" class="text-light" style="width:10%" title="sair"><i class="fas fa-power-off"></i></a><br/>
+            <a href="/painel" class="text-light" style="width:10%" title="voltar"><i class="fas fa-chevron-circle-left"></i></a><br/>
             <span><img src="img/sistema/logo_ganko.png" alt="logo ganko" class="img-fluid logo" /></span>
             <a href="/perfil" class="text-light" style="width:5%" title="perfil"><i class="fas fa-user-circle"></i></a><br/>
-            <a href="/adicionar_amigos" class="text-light ml-3" style="width:5%" title="amigos"><i class="fas fa-user-friends"></i></a>
         </nav>
     </header>
     <div id="mySidenav" class="sidenav bg-success">
@@ -14,7 +13,6 @@
         <div class="link_a">
             <a href="/sair" class="text-light nav_a" title="sair"><i class="fas fa-power-off"></i> encerrar sessão</a><br/>
             <a href="/perfil" class="text-light nav_a" title="perfil"><i class="fas fa-user-circle"></i> perfil</a><br/>
-            <a href="/adicionar_amigos" class="text-light nav_a" title="amigos"><i class="fas fa-user-friends"></i> adicionar amigos</a>
         </div>
     </div>
     <span class="bg-success open_resp" style="font-size:30px;cursor:pointer" onclick="openNav()">
